--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18",
+    "@astro-community/astro-embed-youtube": "^0.2.2",
     "@astrojs/mdx": "^0.17.2",
     "@astrojs/rss": "^2.1.1",
-    "@astrojs/sitemap": "^1.1.0"
+    "@astrojs/sitemap": "^1.1.0",
+    "astro": "^2.0.18",
+    "astro-m2dx": "^0.7.15",
+    "fontsource-merriweather": "^4.0.0",
+    "fontsource-montserrat": "^4.0.0"
   }
 }
