--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/rss": "^2.1.1",
     "@astrojs/sitemap": "^1.1.0",
     "astro": "^2.0.18",
+    "astro-icon": "^0.8.0",
     "astro-m2dx": "^0.7.15",
     "fontsource-merriweather": "^4.0.0",
     "fontsource-montserrat": "^4.0.0"
