--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "astro-icon": "^0.8.0",
     "astro-m2dx": "^0.7.15",
     "fontsource-merriweather": "^4.0.0",
-    "fontsource-montserrat": "^4.0.0"
+    "fontsource-montserrat": "^4.0.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0"
   },
   "devDependencies": {
     "prettier": "^2.8.4",
