--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "plop":"plop"
+    "plop": "plop"
   },
   "dependencies": {
     "@astro-community/astro-embed-youtube": "^0.2.2",
     "@astrojs/mdx": "^0.17.2",
     "@astrojs/rss": "^2.1.1",
     "@astrojs/sitemap": "^1.1.0",
+    "@tweakpane/core": "^1.1.9",
     "astro": "^2.0.18",
     "astro-icon": "^0.8.0",
     "astro-m2dx": "^0.7.15",
     "fontsource-merriweather": "^4.0.0",
     "fontsource-montserrat": "^4.0.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.1.0"
+    "rehype-slug": "^5.1.0",
+    "tweakpane": "^3.1.10"
   },
   "devDependencies": {
     "plop": "^3.1.2",
