--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
     "@tweakpane/core": "^1.1.9",
+    "@tweakpane/plugin-essentials": "^0.1.8",
     "astro": "^2.7.2",
     "astro-icon": "^0.8.1",
     "astro-m2dx": "^0.7.16",
