--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "",
   "type": "module",
+  "license":"MIT",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
@@ -11,14 +12,14 @@
     "plop": "plop"
   },
   "dependencies": {
-    "@astro-community/astro-embed-youtube": "^0.2.2",
-    "@astrojs/mdx": "^0.19.7",
+    "@astro-community/astro-embed-youtube": "^0.4.1",
+    "@astrojs/mdx": "^1",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@tweakpane/core": "^1.1.9",
     "@tweakpane/plugin-essentials": "^0.1.8",
-    "astro": "^2.7.2",
+    "astro": "^3",
     "astro-icon": "^0.8.1",
     "astro-m2dx": "^0.7.16",
     "fontsource-merriweather": "^4.0.0",
